--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
@@ -70,16 +70,16 @@
 								<th>累计收益（元）</th>
 							</tr>
 							<tr>
-								<td>--.--</td>
-								<td>--.--</td>
-								<td>--.--</td>
+								<td>${org_hftTotalBalanceDisplay}</td>
+								<td>${org_hftFunddayincome}</td>
+								<td>${org_hftTotalincome}</td>
 							</tr>
 						</table>
 					</div>
 					<div class="c3">
 						<div class="d1">
-							<a href="#" onclick="alert('未开机构户')" class="btnA mr20">充值</a>
-							<a href="#" onclick="alert('未开机构户')" class="btnB">取现</a>
+							<a href="${staticDomain}/trade/pay_index.htm" class="btnA mr20">充值</a>
+    						<a href="${staticDomain}/trade/cash_index.htm" class="btnB">取现</a>
 						</div>
 						<div class="d2"><a href="" class="a_m1 mr20">资产明细</a><a href="#">自动理财设置</a><div class="trip"><div>解释文字内容解释文字内容解释文字内容解释文字内容<b></b></div></div></div>
 					</div>
