--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/orgCashIndex.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/orgCashIndex.vm
@@ -7,7 +7,7 @@
 <div class="body">
     <div class="inner clearfix">
         <div class="title clearfix">
-            <h2 class="title-main fl">个人账户取现</h2>
+            <h2 class="title-main fl">企业账户取现</h2>
         </div>
         <div class="notice">公告：15:00前转入资金（以支付成功时间为准），第二个工作日确认份额，收益将在确认后次日发放，15:00后转入资金顺延1个工作日发放收益。双休日及国家法定假期，基金公司不进行份额确认。</div>
         <div id="date-line-redeem" class="date-line">
@@ -43,7 +43,7 @@
             </div>
 		</div>
         <div class="form-cash">
-            <form class="common-form" action="${ufbDomain}/trade/cash_result.htm" method="post">
+            <form class="common-form" action="${ufbDomain}/trade/orgCashResult.htm" method="post">
 				${refreshTools.genInputHtml()}
 				<input id="tradeacco" name="tradeacco" value="${card.tradeacco}" type="hidden"/>
 				<input id="cardAvailable" name="cardAvailable" value="${card.available}" type="hidden"/>
