--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
@@ -34,7 +34,7 @@ $(function(){
 		}
 	});
 	
-	#if($CustinfoVo.openaccount=="Y")
+	#if($S_CUSTINFO.tradepwd)
 	//修改交易密码按钮
 	$("#btn-settingTradePwd").on("click",function(){
 		
@@ -181,7 +181,7 @@ $(function(){
                 <div class="tabs password-tabs clearfix">
 					##findPasswordStep1.html
                     <a id="tab1" class="btn tab fl" href="javascript:;">修改登录密码</a>
-					#if($CustinfoVo.openaccount=="Y")
+					#if($S_CUSTINFO.tradepwd)
                     <a id="tab2" class="btn tab fl" href="javascript:;">修改交易密码</a>
                     <a id="tab3" class="btn tab fl" href="javascript:;">忘记交易密码</a>
 					#end
@@ -228,7 +228,7 @@ $(function(){
                             </ul>
                         </form>
                     </div>
-					#if($CustinfoVo.openaccount=="Y")
+					#if($S_CUSTINFO.tradepwd)
                     <div id="panel2" class="panel slide-out">
 						<form id="form-settingTradePwd" class="common-form" action="${ufbDomain}/setting/settingTradePwd.htm" method="post">
                             ${refreshTools.genInputHtml()}
