--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header_0_trade.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header_0_trade.vm
@@ -23,8 +23,8 @@
             			$start****$end
             		#else
 						游客
-            		#end
-				</span><a href="#"></a>
+					#end
+				</span><a href="${staticDomain}/setting/settingAccount.htm"></a><i id="logout">退出</i>
 			</div>
 		</div>
 	</div>
@@ -42,7 +42,7 @@
 	<div class="topNav">
 		<div class="container">
 			<div class="b1"><a href="#" class="active">机构版</a><a href="#">家庭版</a></div>
-			<div class="b2"><a href="${staticDomain}/home/index.htm" class="c1" id="login">登录</a></div>
+			<div class="b3"><a href="${staticDomain}/home/index.htm" id="login">登录</a>丨<a href="${staticDomain}/register/index.htm">注册</a></div>
 		</div>
 	</div>
     <div class="container">
@@ -57,3 +57,10 @@
     </div>
 	#end
 </div>
+<script>
+$(function(){
+	$("#logout").on("click",function(){
+		window.location.href = "${ufbDomain}/cust/logout.htm";
+	});
+});
+</script>
