--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/help/helpAbout.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/help/helpAbout.vm
@@ -4,87 +4,48 @@
     <title>幼富通 - 帮助中心 - 关于幼富通</title>
 </head>
 <body>
-<div class="container help">
-    <div class="header">
-        <div class="inner clearfix rel">
-            <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
-            <div class="nav">
-				#if ($CustinfoVo)
-				<a href="${staticDomain}/home/index.htm">首页</a>|<a
-				href="${staticDomain}/cust/session.htm">资产总览</a>|<a
-				href="${staticDomain}/setting/settingAccount.htm">账户管理</a>|<a 
-				href="${staticDomain}/help/helpNotice.htm">帮助中心</a><span class="member" 
-    			href="javascript:;"><i class="trans icon"></i>
-					#if ($CustinfoVo.invnm)
-						$!{CustinfoVo.invnm}
-                    #elseif ($CustinfoVo.mobileno)
-						#set($tailStr=$CustinfoVo.mobileno)
-						#set($start=$tailStr.substring(0,3))
-						#set($end=$tailStr.substring(7,11))
-						$start****$end
-					#else
-					#end
-				<a href="${staticDomain}/cust/logout.htm" class="trans out">安全退出</a></span>
-				#else
-				<a href="${staticDomain}/home/index.htm">登录</a>|<a
-				href="${staticDomain}/register/index.htm">注册</a>|<a 
-				href="${staticDomain}/home/index.htm">资产总览</a>|<a class="last" 
-				href="${staticDomain}/help/helpNotice.htm">帮助中心</a>
-				#end
-			</div>
-        </div>
-    </div>
-    <div class="body">
+	<div class="body">
         <div class="inner clearfix">
             <div class="title">
                 <h2 class="title-main">帮助中心</h2>
             </div>
             <div class="side side-nav fl">
-				<ul>
-					<li><a href="${staticDomain}/help/helpNotice.htm">机构理财须知</a></li>
-                    <li><a href="${staticDomain}/help/helpQA.htm">常见问题</a></li>
-                    <li><a class="current" href="${staticDomain}/help/helpAbout.htm">关于幼富通</a></li>
-                    <li><a href="${staticDomain}/help/helpContact.htm">联系我们</a></li>
+                <ul>
+                  <li><a href="${staticDomain}/help/helpNotice.htm">机构须知</a></li>
+				  <li><a href="${staticDomain}/help/helpQA.htm">常见问题</a></li>
+				  <li><a class="current" href="${staticDomain}/help/helpAbout.htm">关于幼富通</a></li>
+				  <li><a href="${staticDomain}/help/helpContact.htm">联系我们</a></li>
                 </ul>
             </div>
             <div class="main fr">
                 <div class="help-content">
                     <ul>
                         <li><a name="a1"></a>
-                            <h3>关于幼富通？</h3>
-                            <div>幼教机构如何注册幼富通幼教机构，如何注册幼富通幼教机构如何注册幼富通幼教机构如何注册、幼富通幼教机构如何注册幼富通幼教机构如何注册，幼富通幼教机构如何注册幼富通幼教机构如何注册幼富通，幼教机构如何注册幼富。</div>
+                            <h3>关于幼富通</h3>
+                            <div><p>幼富通基于互联网平台，专注于为全国幼教机构提供线上与线下结合的收费、理财、贷款、分期采购等金融业务管理服务。</p>
+                            <div><p>通过使用幼富通平台，幼教机构能够直接对接银行账户进行线上线下统一收费、统一对账；大大减少财务管理客户端定制成本与技术门槛；轻松提升如财务、档案管理系统的使用率；同时幼富宝、幼富贷等业务可以帮助幼教机构大幅提升闲置资金收益、获得低成本贷款或优质产品的分期采购额度。</p>
+                            </div>
                         </li>
                         <li><a name="a2"></a>
-                            <h3>关于幼富通？</h3>
-                            <div>幼教机构如何注册幼富通幼教机构，如何注册幼富通幼教机构如何注册幼富通幼教机构如何注册、幼富通幼教机构如何注册幼富通幼教机构如何注册，幼富通幼教机构如何注册幼富通幼教机构如何注册幼富通，幼教机构如何注册幼富。</div>
+                            <h3>幼富通团队</h3>
+                            <div><p>幼富通平台属于从事互联网金融信息服务的高科技创投企业，由来自于公募基金公司、互联网金融上市公司、银行及电子商务系统开发、企业管理咨询与法律界专业人士共同组成，同时由幼教行业专家团担任投资人及产品顾问、整合数百家全国幼教通路商提供O2O落地金融服务。</p>
+                            </div>
                         </li>
                         <li><a name="a3"></a>
-                            <h3>关于幼富通？</h3>
-                            <div>幼教机构如何注册幼富通幼教机构，如何注册幼富通幼教机构如何注册幼富通幼教机构如何注册、幼富通幼教机构如何注册幼富通幼教机构如何注册，幼富通幼教机构如何注册幼富通幼教机构如何注册幼富通，幼教机构如何注册幼富。</div>
+                            <h3>幼富通合作伙伴</h3>
+                           <div><p>幼富通平台内的金融服务均由中国银联、海富通基金等专业金融机构提供，同时对接全国数百家银行、实力金融租赁机构及众多幼教产品厂商如校车、装修、教玩具等。</p></div>
                         </li>
                         <li class="last"><a name="a4"></a>
-                            <h3>关于幼富通？</h3>
-                            <div>幼教机构如何注册幼富通幼教机构，如何注册幼富通幼教机构如何注册幼富通幼教机构如何注册、幼富通幼教机构如何注册幼富通幼教机构如何注册，幼富通幼教机构如何注册幼富通幼教机构如何注册幼富通，幼教机构如何注册幼富。</div>
+                            <h3>幼富通理念愿景</h3>
+                            <div><p>幼富通致力于通过互联网工具和深度的行业理解，帮助幼教机构提升财务与经营管理水平。</p></div>
+                            <div><p>幼富通构建针对性的信用模型，帮助幼教机构将预期相对稳定的现金流，转化为信用资金额度。</p></div>
+                            <div><p>幼富通精心引入高标准的金融服务，帮助幼教机构提升品牌实力与资金实力、加快连锁扩张速度，最终提升中国幼儿的整体教育水平！</p></div>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
-    <div class="footer">
-        <div class="inner clearfix">
-            <div class="info fl">
-                <p>微信服务号：UFUfund</p>
-                <p>服务邮箱：<a href="mailto:service@ufufund.com">service@ufufund.com</a></p>
-                <p>海富通产品：400-8840-099</p>
-            </div>
-            <div class="copyright fr">
-                <p>幼富通版权所有 ©2015</p>
-                <p><a target="_blank" href="http://www.miitbeian.gov.cn/">沪ICP备14054347号</a></p>
-            </div>
-        </div>
-    </div>
-</div>
 <script src="${staticDomain}/js/scripts/load.js"></script>
 </body>
 </html>
